# nao_project

./: .gitignore  Makefile  README.md  looog  make_plots.py  rl.drawio
config/: extension.toml
scripts/: list_envs.py  random_agent.py  zero_agent.py
scripts/analyse/: make_tables.py
scripts/rl_games/: play.py  train.py
scripts/rsl_rl/: play.py  train.py
scripts/sb3/: play.py  train.py
scripts/skrl/: play-analyse-side.py  play-analyse-yaml.py  play-analyse.py  play-robotics-dev.py  play.py  train.py
sim2real_ws/: .gitmodules  README.md  dependencies.repos
sim2real_ws/nao_isaac_sim2real/: README.md  package.xml  setup.cfg  setup.py
sim2real_ws/nao_isaac_sim2real/config/: nao_isaac_config.yaml
sim2real_ws/nao_isaac_sim2real/launch/: nao_isaac_node_launch.py
sim2real_ws/nao_isaac_sim2real/nao_isaac_sim2real/: nao_isaac_node  nao_isaac_node.py
sim2real_ws/nao_isaac_sim2real/sim2real/: README_NAO_POLICY.md  nao_policy_node.py  test_nao_policy.py
sim2real_ws/nao_isaac_sim2real/sim2real/robots/: nao.py
sim2real_ws/nao_isaac_sim2real/sim2real/utils/: config_loader.py
sim2real_ws/nao_isaac_sim2real/tests/: test_nao_isaac_node.py
source/nao_project/: setup.py
source/nao_project/docs/: CHANGELOG.rst
source/nao_project/nao_project/: ui_extension_example.py
source/nao_project/nao_project/assets/: nao.py
source/nao_project/nao_project/assets/nao/: README.md  nao-project - Copy.usd  nao-project-contact-dud.usd  nao-project-contact-dud2.usd  nao-project-contact.usd  nao-project-with-world.usd  nao-project.usd  nao.urdf
(+35 files in other folders)
