<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nao_isaac_sim2real</name>
  <version>0.0.0</version>
  <description>package to unpack isaac lab policy and send commands to nao lola client</description>
  <maintainer email="reillyfox6@gmail.com">reilly</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>nao_lola_command_msgs</depend>
  <depend>nao_lola_sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
